--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="image_description">Милый котик</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="disclaimer">"Posters:https://www.movieposters.com/"</string>
-
+    <declare-styleable name="RatingDonutView">
+    <attr name="progress" format="integer" />
+    <attr name="stroke" format="float" />
+    </declare-styleable>
 </resources>
